--- a/template.html.j2
+++ b/template.html.j2
@@ -6,6 +6,18 @@
 <body>
     <h1>{{ heading }}</h1>
     <p>{{ body }}</p>
-    
+
+
+    <h2>Events for the Month</h2>
+    <div id="events">
+        {% for event in events %}
+            <div class="event">
+                <h3>{{ event.title }}</h3>
+                <p>Date: {{ event.date }}</p>
+                <p>Tags: {{ event.tags | join(', ') }}</p>
+                <p><a href="{{ event.link }}">More info</a></p>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
