--- a/template.html.j2
+++ b/template.html.j2
@@ -167,7 +167,7 @@
                 <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
                  <tr>
                   <td align="center" valign="top" style="padding: 0px 0px 20px 0px;">
-                   <img src="https://github.com/patricia-ternes/test-newsletter/blob/main/assets/imgs/rc-logo.png" class="pc-w620-width-140 pc-w620-height-auto" width="150" height="45" alt="" style="display: block; border: 0; outline: 0; line-height: 100%; -ms-interpolation-mode: bicubic; width:150px; height: auto; max-width: 100%;" />
+                   <img src="https://raw.githubusercontent.com/patricia-ternes/test-newsletter/main/assets/imgs/rc-logo.png" class="pc-w620-width-140 pc-w620-height-auto" width="150" height="45" alt="" style="display: block; border: 0; outline: 0; line-height: 100%; -ms-interpolation-mode: bicubic; width:150px; height: auto; max-width: 100%;" />
                   </td>
                  </tr>
                 </table>
@@ -253,7 +253,7 @@
                             <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
                              <tr>
                               <td align="center" valign="top" style="padding: 10px 0px 0px 0px;">
-                               <img src="https://github.com/patricia-ternes/test-newsletter/blob/main/assets/imgs/calendar-w.png" class="" width="38" height="auto" alt="" style="display: block; border: 0; outline: 0; line-height: 100%; -ms-interpolation-mode: bicubic; width:20%; height: auto;" />
+                               <img src="https://raw.githubusercontent.com/patricia-ternes/test-newsletter/main/assets/imgs/calendar-w.png" class="" width="38" height="auto" alt="" style="display: block; border: 0; outline: 0; line-height: 100%; -ms-interpolation-mode: bicubic; width:20%; height: auto;" />
                               </td>
                              </tr>
                             </table>
